--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Kappa
+<!DOCTYPE html>
+<html>
+<head>
+  <title>= Grey Face (no space)</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <meta name="description" content="GreyFace = Grey Face (nospace)">
+  <meta name="keywords" content="grey, face, greyface, no, space, nospace">
+  <style>
+    body {
+      height: 100%;
+    }
+    div {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      white-space: nowrap;
+    }
+    img {
+      vertical-align: middle;
+    }
+    span {
+      font-family: Helvetica, Arial, sans-serif;
+      font-weight: bold;
+      font-size: 52px;
+      color: #333;
+      white-space: nowrap;
+    }
+  </style>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-56512619-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+</head>
+<body>
+  <div>
+    <img src="/greyface.png" title="GreyFace">
+    <span>= Grey Face (no space)</span>
+  </div>
+</body>
+</html>
