--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div>
     <img src="/greyface.png" title="GreyFace">
-    <span>= Grey Face (no space)</span>
+    <span><!-- Kappa --> = Grey Face (no space)</span>
   </div>
 </body>
 </html>
